<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".ui.notifications.NotificationsFragment"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="0dp">


    <TextView
        android:id="@+id/vertiaclerrorNum"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="272dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansregular"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dp"
        android:text="Loading..."
        android:textColor="#808080"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/horizontalerrorNum"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="272dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansregular"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dp"
        android:text="Loading..."
        android:textColor="#808080"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/textViewCord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="#808080"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/opensansregular"
        android:text="@string/Enter"
        android:textColor="#808080"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewCord" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="154dp"
        android:layout_marginBottom="153dp"
        android:fontFamily="@font/opensansregular"
        android:text="@string/Coordinate"
        android:textColor="#808080"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/ErrorCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="138dp"
        android:fontFamily="@font/opensansregular"
        android:text="Error Check"
        android:textColor="#808080"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/verticalerror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/opensansregular"
        android:text="Vertical Error"
        android:textColor="#808080"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/horizontalerror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/opensansregular"
        android:text="Horizontal Error"
        android:textColor="#808080"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent"

        />


    <TextView
        android:id="@+id/Before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="195dp"
        android:layout_marginBottom="110dp"
        android:fontFamily="@font/opensansregular"
        android:text="Before"
        android:textColor="#808080"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/After"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="295dp"
        android:layout_marginBottom="110dp"
        android:fontFamily="@font/opensansregular"
        android:text="After"
        android:textColor="#808080"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/beforeHorizontalerrorNum"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="176dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansregular"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dp"
        android:text="Loading..."
        android:textColor="#808080"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/beforeVertiaclerrorNum"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="176dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansregular"
        android:gravity="center_vertical|left"
        android:paddingLeft="10dp"
        android:text="Loading..."
        android:textColor="#808080"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansbold"
        android:text="@string/Y"
        android:textColor="#808080"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button11"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansbold"
        android:text="@string/Z"
        android:textColor="#808080"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <TextView
        android:id="@+id/ResultY"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansbold"
        android:textSize="12dp"
        android:paddingTop="12dp"
        android:paddingLeft="25dp"
        android:text="Data Loading..."
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="@+id/button17"
        app:layout_constraintStart_toStartOf="@+id/button17"
        />


    <TextView
        android:id="@+id/button17"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansbold"
        android:textSize="12dp"
        android:paddingTop="12dp"
        android:paddingLeft="25dp"
        android:text="Data Loading..."
        app:layout_constraintBaseline_toBaselineOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button11"
        />


    <TextView
        android:id="@+id/ResultX"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansbold"
        android:text="Data Loading..."
        android:textSize="12dp"
        android:paddingTop="12dp"
        android:paddingLeft="25dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button5"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansbold"
        android:text="@string/X"
        android:textColor="#808080"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_LLH"
        android:onClick="onClickLLH"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="83dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansregular"
        android:text="@string/LLH"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_XYZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
 />

    <Button
        android:id="@+id/btn_XYZ"
        android:onClick="onClickLLH"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="95dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansregular"
        android:text="@string/XYZ"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/btn_LLH"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansregular"
        android:onClick="onButtonClear"
        android:text="Start"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button19"
        android:onClick="onButtonRegist"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/opensansregular"
        android:text="Stop"
        app:layout_constraintBaseline_toBaselineOf="@+id/button18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="@+id/button17" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ResultX"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>